Manifest/mywebapi-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mywebapi-deploy
  labels:
    app: mywebapi
    env: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mywebapi
  strategy:
    type: RollingUpdate
  template:
    metadata: 
      name: mywebapi
      labels:
        app: mywebapi
    spec: 
      containers: 
        - image: jimmymr/mywebapi:1.0
          name: mywebapi
          ports:
            - containerPort: 80
