Manifest/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
spec:
  type: ClusterIP 
  selector:
    app: mysql
  ports:
  - port: 3306
    targetPort: 3306
