Manifest/mywebapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mywebapi-svc
spec:
  type: ClusterIP 
  selector:
    app: mywebapi
  ports:
  - port: 80
    targetPort: 80
