Manifest/mywebapi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mywebapi-ingress
  labels:
    app: mywebapi
spec:
  rules:
    - host: "www.mywebapi.com"
      http:
        paths: 
        - path: /
          pathType: Prefix
          backend:
            service:
              name: mywebapi-svc
              port:
                number: 80
